# Active-Trace-SSD

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml  skills-lock.json  test_admin.ps1
.atl/: skill-registry.md
backend/: .env.example  Dockerfile  alembic.ini  check_cols.py  get_tenant.py  pyproject.toml  seed_add_permissions.sql  seed_add_rp.sql  seed_asignaciones.py  seed_comms.py  seed_dev.py  test_conn.py  test_endpoints.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tenant_table.py  002_create_users_refresh_recovery.py  003_create_rol_permiso_tables.py  004_create_audit_log_table.py  005_create_estructura_academica.py  006_create_consumed_challenge_tokens.py  007_create_usuario_asignacion.py  008_create_version_padron_entrada_padron.py  009_create_calificacion_umbral_materia.py  010_create_comunicacion_table.py  011_create_encuentro_guardia_tables.py  012_create_evaluacion_coloquio_tables.py  013_create_aviso_tables.py  014_create_tarea_tables.py  015_create_programa_materia_fecha_academica_tables.py  016_create_liquidacion_tables.py  017_create_hilo_mensaje_tables.py  018_add_actividad_table.py  (+6 more)
backend/app/: main.py
backend/scripts/: remediate_encrypted_entrada_padron.py
backend/tests/: conftest.py  helpers.py  test_alumno_dashboard.py  test_app_startup.py  test_database.py  test_encryption.py  test_health.py  test_repository_base.py  test_settings.py  test_soft_delete.py  test_tenant_crud.py  test_tenant_isolation.py
backend/workers/: __main__.py  comunications_worker.py  main.py
(+1085 files in other folders)
